# CMake_Cookbook_Exercises

./: .gitignore  CMakeLists.txt  Message.cpp  Message.hpp  README.md  hello-world.cpp
Chapter1-8/: CMakeLists.txt
Chapter10_1/: CMakeLists.txt
Chapter10_1/src/: CMakeLists.txt  Message.hpp  hello-world.cpp
Chapter10_1/tests/: CMakeLists.txt
Chapter1_10/: CMakeLists.txt
Chapter1_9/: CMakeLists.txt
Chapter2_1/: CMakeLists.txt
Chapter2_3/: CMakeLists.txt  hello-world.cpp
Chapter2_4/: CMakeLists.txt
Chapter2_5/: CMakeLists.txt
Chapter3-8/: CMakeLists.txt  path-info.cpp
Chapter3_1/: CMakeLists.txt
Chapter3_2/: CMakeLists.txt  hello-embedded-python.c
Chapter3_5/: CMakeLists.txt  example.cpp
Chapter3_7/: CMakeLists.txt  linear-algebra.cpp
Chapter3_9/: CMakeLists.txt  hwclient.c  hwserver.c
Chapter4_1/: CMakeLists.txt  test.py
Chapter4_10/: CMakeLists.txt  clean-up.py
Chapter4_2/: CMakeLists.txt  test.cpp  test.sh
Chapter4_4/: CMakeLists.txt  test.cpp
Chapter4_9/: CMakeLists.txt  feature-b.py  feature-d.py
Chapter5_1/: CMakeLists.txt
Chapter5_2/: CMakeLists.txt
Chapter5_3/: CMakeLists.txt  linear-algebra.cpp
Chapter5_4/: CMakeLists.txt
Chapter5_5/: CMakeLists.txt  echo-file.py  example.f90  static-size.py
Chapter7_1/: CMakeLists.txt
Chapter7_1/src/: CMakeLists.txt
Chapter7_1/tests/: CMakeLists.txt
Chapter7_2/: CMakeLists.txt
Chapter7_3/: CMakeLists.txt  set_compiler_flag.cmake
Chapter7_4/: CMakeLists.txt
Chapter7_4/cmake/: testing.cmake
Chapter7_4/tests/: CMakeLists.txt
Chapter7_5/: CMakeLists.txt
Chapter7_5/cmake/: custom.cmake  include_guard.cmake
Chapter8_1/: CMakeLists.txt
Chapter8_1/src/: hello-world.cpp
Chapter8_2/: CMakeLists.txt
Chapter8_2/src/: CMakeLists.txt
Chapter8_5/: CMakeLists.txt
Chapter8_5/src/: CMakeLists.txt  use_message.cpp
